--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
+<!--Opencvの読み込み (Selfie Segmentationのみの利用なら不要-)-->
   <script src="https://docs.opencv.org/3.4.1/opencv.js"></script>
+  <!--カメラをmediapipeで簡単に利用するためのツール-->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/selfie_segmentation.js" crossorigin="anonymous"></script>
-  
+  <!--selfie segmentationの読み込み-->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/selfie_segmentation.js" crossorigin="anonymous"></script>  
 
-  <script type="module">
+  <script type="text/javascript">
     let videoElm ;
     let canvasElm;
     let canvasCtx;
@@ -18,7 +20,7 @@
     let initialized=false;
     
     window.onload = function() {
-      videoElm = document.getElementsByClassName('input_video')[0];
+      videoElm = document.getElementById('input_video');
       canvasElm = document.getElementById('output_canvas');
       canvasCtx = canvasElm.getContext('2d');
       cvCanvasElm = document.getElementById('opencv_canvas');
@@ -95,7 +97,7 @@
 
 <body>
   <div class="container">
-    <video class="input_video" style="position:absolute; "></video>    
+    <video id="input_video" style="position:absolute; "></video>    
     <canvas id="output_canvas" style="position:absolute;"></canvas>
     <canvas id="opencv_canvas" style="position:absolute;display:none;"></canvas>
   </div>
